tests/miniJava/pos/000020_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { java = false [ new int [ 0 ] ] ; } }
