tests/miniJava/neg/000612_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = class int [ 0 ] ; } }
